@@ -1,3 +1,3 @@
 (% stdlib.rli generated by rlc1 %)
 
-external exit! (int) -> void;
+external exit @ (int) -> void;
