@@ -1,0 +1,21 @@
+(%
+ % rowl - generation 2
+ % Copyright (C) 2010 nineties
+ %
+ % $Id: sys.rl 2010-04-08 01:06:21 nineties $
+ %)
+
+(% system calls %)
+
+SysExit    => 1;
+SysFork    => 2;
+SysRead    => 3;
+SysWrite   => 4;
+SysOpen    => 5;
+SysClose   => 6;
+SysWaitpid => 7;
+SysUnlink  => 10;
+SysExecve  => 11;
+SysMmap2   => 192;
+SysMunmap  => 91;
+
